Improve email mesures & annonce
Improve email mesures & annonce

--- a/Artywiz/annonces.html
+++ b/Artywiz/annonces.html
@@ -1,4 +1,4 @@
-<!-- Email object : Annoncez vos matchs de coupes ou championnats avec Artywiz et la LGEF !-->
+<!-- Email object : Faites le buzz en annonçant les matchs de vos équipe, avec ARTYWIZ football et la LGEF!-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -52,7 +52,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253070/etape%20-6/Annonce_header_emailing.jpg"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600850617/annonce/bg-annonce.jpg"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -133,6 +133,17 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td height="50"></td>
                                     </tr>
+                                    <tr>
+                                        <td
+                                            style="font-family:Century gothic, Arial, Sans-serif; font-size: 14px; color:#FFFFFF;font-weight: bold;">
+                                            <multi label="headline">
+                                                <p align="center" style="margin: 0;">AFFICHES - PUBLICATION RÉSEAUX SOCIAUX - EMAILINGS - BANNIÈRES WEB</p>
+                                            </multi>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td height="50"></td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
@@ -144,15 +155,102 @@ u + .body .full { width:100% !important; width:100vw !important;}
     <!--end header-->
 
     <!--article-->
+    <module label="philippe-section" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td>
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td height="50"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <!--left-->
+                                <table width="275" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600835565/annonce/illustration_sani.png" width="275" style="display:block; line-height:0px; font-size:0px; border:0px; width:250px" editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td align="center">
+                                            <p style="font-family:Open sans, Arial, Sans-serif; font-size: 16px; color:#4A4A4A; text-transform: uppercase; font-weight: bold; margin: 0; margin-top: 30px;">Référents communication, dirigeants, éducateurs, entraineurs…</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="25" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="25"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--right-->
+                                <table width="275" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--title-->
+                                    <tr>
+                                        <td
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
+                                            <multi label="content">
+                                                <p align="left" style="line-height: 25px; margin: 0;">
+                                                    Chaque semaine avec ARTYWIZ football, les matchs de vos équipes deviennent de véritables évènements!
+                                                </p>
+                                            </multi>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                    <!--content-->
+                                    <tr>
+                                        <td
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size: 13px; color:#979797;line-height:28px;">
+                                            <multi label="content">
+                                                <p align="left" style="line-height: 20px; margin: 0;">
+                                                    En quelques clics de souris, réalisez tous les supports de communication pour vos annonces de matchs : <br><br>
+
+                                                    Sélectionnez la date, l’adversaire, choisissez vos sponsors, la mise en page et les couleurs…  Artywiz se charge du reste et vous prépare automatiquement : <br><br>
+                                                    
+                                                    - <b>des affiches</b> à exposer dans les commerces ou au club house, <br><br>
+
+                                                    - <b>des publications</b> pour les réseaux sociaux, <br><br>
+
+                                                    - <b>des emails</b> à envoyer à votre communauté et à vos partenaires <br><br>
+
+                                                    - <b>des bannières</b> à placer sur votre site web.
+                                                </p>
+                                            </multi>
+                                        </td>
+                                    </tr>
+                                    <!--end content-->
+                                </table>
+                                <!--end right-->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="40"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end article-->
+
+    <!--article-->
     <module label="article" auto>
         <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center">
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td height="22"></td>
-                        </tr>
                         <tr>
                             <td>
                                 <!--left-->
@@ -161,17 +259,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--content-->
                                     <tr>
                                         <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
+                                            style="font-family:Open sans, Arial, Sans-serif; font-weight: bold; font-size: 18px; color: #4A4A4A;">
                                             <multi label="content">
-                                                <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
-                                                    Chaque semaine avec ARTYWIZ football, les matchs de vos équipes deviennent de véritables évènements!
-                                                </p>
-                                                <p align="left">
-                                                    En quelques clics de souris, réalisez tous les supports de communication pour vos annonces de matchs. Sélectionnez la date, l’adversaire, choisissez vos sponsors, la mise en page et les couleurs… Artywiz se charge du reste et vous prépare automatiquement : <br>
-                                                    - <b>des affiches</b> à exposer dans les commerces ou au club house, <br>
-                                                    - <b>des publications</b> pour les réseaux sociaux, <br>
-                                                    - <b>des emails</b> à envoyer à votre communauté et à vos partenaires <br>
-                                                    - <b>des bannières</b> à placer sur votre site web.
+                                                <p align="center" style="line-height: 23px; margin: 0;">
+                                                    MODÈLES DE DOCUMENTS PERSONNALISABLES
                                                 </p>
                                             </multi>
                                         </td>
@@ -185,7 +276,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                 </td>
             </tr>
             <tr>
-                <td height="17"></td>
+                <td height="20"></td>
             </tr>
         </table>
     </module>
