--- a/Artywiz/mesures.html
+++ b/Artywiz/mesures.html
@@ -112,9 +112,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <p align="center" style="margin-top: 26px;">Communiquez autour <br>
-                                                    des mesures sanitaires <br>
-                                                    de votre club!</p>
+                                                <p align="center" style="margin-top: 26px;">Sécurisez les activités <br>de votre club</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -329,7 +327,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600673344/mesures-sanitaires/mockup-big/fb-post-LE-11-GAGNANT-CONTRE-LE-VIRUS.jpg" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1601273545/mesures-sanitaires/mockup-big/portez-un-masque.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -344,7 +342,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
                                             <single label="title">
-                                                Le 11 gagnant contre le virus
+                                                Portez un masque
                                             </single>
                                         </td>
                                     </tr>
@@ -397,9 +395,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -433,9 +428,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
@@ -465,7 +457,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600673344/mesures-sanitaires/mockup-big/Acc%C3%A8s_au_club-house.jpg" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600673344/mesures-sanitaires/mockup-big/fb-post-LE-11-GAGNANT-CONTRE-LE-VIRUS.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -480,7 +472,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
                                             <single label="title">
-                                                Accès au club-house
+                                                Le 11 gagnant contre le virus
                                             </single>
                                         </td>
                                     </tr>
@@ -532,9 +524,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -550,7 +539,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600673421/mesures-sanitaires/mockup-small/Portez_un_masque.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1601273556/mesures-sanitaires/mockup-small/Acc%C3%A8s_au_club-house.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -563,14 +552,11 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
                                             <single label="title">
-                                                Portez un masque
+                                                Accès au club-house
                                             </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
@@ -667,9 +653,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -703,9 +686,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
@@ -802,9 +782,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -838,9 +815,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
@@ -937,9 +911,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -973,9 +944,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
@@ -1072,9 +1040,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -1108,9 +1073,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         </td>
                                     </tr>
                                     <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
                                 </table>
                                 <!--end right-->
                             </td>
