--- a/Artywiz/mesures.html
+++ b/Artywiz/mesures.html
@@ -112,7 +112,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <p align="center" style="margin-top: 26px;">Sécurisez les activités <br>de votre club</p>
+                                                <p align="center" style="margin-top: 26px;">Communiquez autour <br>
+                                                    des mesures sanitaires <br>
+                                                    de votre club!</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -197,7 +199,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#4A4A4A; text-transform: uppercase; font-weight: bold;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 25px; margin: 0;">
-                                                    Sécurisez le redémarrage des activités sportives
+                                                    Sécurisez les activités de votre club
                                                 </p>
                                             </multi>
                                         </td>
