--- a/Artywiz/confirmation-email.html
+++ b/Artywiz/confirmation-email.html
@@ -294,7 +294,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
                         <tr>
-                            <td width="350">
+                            <td width="330">
                                 <p style="font-family: Roboto;
                                 font-style: normal;
                                 font-weight: bold;
@@ -368,9 +368,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
                         <tr>
-                            <td>
+                            <td width="330">
                                 <!--left-->
-                                <table class="table-inner" align="left" width="350" style="max-width: 600px;" border="0" align="center"
+                                <table class="table-inner" align="left" width="330" style="max-width: 600px;" border="0" align="center"
                                     cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
@@ -431,56 +431,36 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                 </table>
                                 <!--end left-->
-                                <!--middle-->
-                                <table width="55" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: center;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">50</p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <!--end middle-->
-                                <!--right-->
-                                <table width="90" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: center;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">€ 2.10</p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <!--end right-->
-                                <table width="105" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: right;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">€ 105.00</p>
-                                        </td>
-                                    </tr>
-                                </table>
+                            </td>
+                            <td width="55">
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: center;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">50</p>
+                            </td>
+                            <td width="90">
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: center;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">€ 2.10</p>
+                            </td>
+                            <td>
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: right;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">€ 105.00</p>
                             </td>
                         </tr>
                     </table>
@@ -495,7 +475,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
 
     <!--list products-->
     <module label="List-Products" auto>
-        <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
+        <table class="full" align="center" bgcolor="#FAFAFA" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td height="42"></td>
             </tr>
@@ -504,9 +484,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
                         <tr>
-                            <td>
+                            <td width="330">
                                 <!--left-->
-                                <table class="table-inner" align="left" width="350" style="max-width: 600px;" border="0" align="center"
+                                <table class="table-inner" align="left" width="330" style="max-width: 600px;" border="0" align="center"
                                     cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
@@ -567,56 +547,36 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     </tr>
                                 </table>
                                 <!--end left-->
-                                <!--middle-->
-                                <table width="55" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: center;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">50</p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <!--end middle-->
-                                <!--right-->
-                                <table width="90" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: center;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">€ 2.10</p>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <!--end right-->
-                                <table width="105" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <tr>
-                                        <td align="center">
-                                            <p style="font-family: Roboto;
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 13px;
-                                            line-height: 15px;
-                                            text-align: right;
-                                            text-transform: uppercase;
-                                            color: #4A4A4A;">€ 105.00</p>
-                                        </td>
-                                    </tr>
-                                </table>
+                            </td>
+                            <td width="55">
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: center;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">50</p>
+                            </td>
+                            <td width="90">
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: center;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">€ 2.10</p>
+                            </td>
+                            <td>
+                                <p style="font-family: Roboto;
+                                    font-style: normal;
+                                    font-weight: bold;
+                                    font-size: 13px;
+                                    line-height: 15px;
+                                    text-align: right;
+                                    text-transform: uppercase;
+                                    color: #4A4A4A;">€ 105.00</p>
                             </td>
                         </tr>
                     </table>
