Create developez district
Create developez district

--- a/Artywiz/developez-district.html
+++ b/Artywiz/developez-district.html
@@ -104,7 +104,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                     <td align="center" style="line-height:0px;">
                                                         <a href="https://lgef.fff.fr" target="_blank">
                                                             <img
-                                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735976/developez/lgef-logo.png" alt="" width="160"
+                                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735977/developez/lgef-district.png" alt="" width="160"
                                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width: 52px;"
                                                                 editable label="image" />
                                                         </a>
@@ -300,7 +300,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206529/developez/1.recherche.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551180/developez/mockup-1.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -349,7 +349,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206528/developez/2.announcer.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551185/developez/mockup-2.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -382,7 +382,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206528/developez/3.communiquer.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551189/developez/mockup-3.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -429,7 +429,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206529/developez/4.liste-de-match.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551193/developez/mockup-4.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -478,7 +478,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206528/developez/5.joyeux.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551197/developez/mockup-5.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -511,7 +511,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206528/developez/6.vente.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551204/developez/mockup-6.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -558,7 +558,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625206529/developez/7.devenez.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625551208/developez/mockup-7.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -1294,10 +1294,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.adetem.org/" target="_blank">
+                                            <a href="https://www.creditmutuel.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/credit-mutuel-large.png" alt="" width="120"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1318,10 +1318,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.groupama.fr/" target="_blank">
+                                            <a href="https://www.colruyt.fr" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/colruyt-large.png" alt="" width="120"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width: 120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
