Change l’email LGEF de votre club by l’email officiel ligue de votre club in email district notify step 6
Change l’email LGEF de votre club by l’email officiel ligue de votre club in email district notify step 6

--- a/Artywiz/developez-district.html
+++ b/Artywiz/developez-district.html
@@ -803,7 +803,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#419BF9; text-transform: uppercase;">
                                                         <multi label="content">
                                                             <p align="center" style="line-height: 20px; margin: 0;">
-                                                                l’email LGEF de votre club
+                                                                l’email officiel ligue de votre club
                                                             </p>
                                                         </multi>
                                                     </td>
