- Change text intro and sponsor in district email - Change header bg by high res
- Change text intro and sponsor in district email
- Change header bg by high res

--- a/Artywiz/communication-les-matchs.html
+++ b/Artywiz/communication-les-matchs.html
@@ -56,7 +56,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626837266/communication/header-communication-les-matchs.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1627268659/communication/header-communication-high-res-lgef.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -677,7 +677,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#419BF9; text-transform: uppercase;">
                                                         <multi label="content">
                                                             <p align="center" style="line-height: 20px; margin: 0;">
-                                                                l’email LGEF de votre club
+                                                                L’email officiel « Ligue » de votre club
                                                             </p>
                                                         </multi>
                                                     </td>
