--- a/Artywiz/communication-les-matchs-district.html
+++ b/Artywiz/communication-les-matchs-district.html
@@ -56,7 +56,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1626946412/communication/header-district.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1627268603/communication/header-communication-high-res.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -677,7 +677,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         style="font-family:Open sans, Arial, Sans-serif; font-size: 20px; color:#419BF9; text-transform: uppercase;">
                                                         <multi label="content">
                                                             <p align="center" style="line-height: 20px; margin: 0;">
-                                                                l’email LGEF de votre club
+                                                                L’email officiel « Ligue » de votre club
                                                             </p>
                                                         </multi>
                                                     </td>
@@ -1168,10 +1168,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.adetem.org/" target="_blank">
+                                            <a href="https://www.creditmutuel.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/credit-mutuel-large.png" alt="" width="120"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1192,10 +1192,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.groupama.fr/" target="_blank">
+                                            <a href="https://www.colruyt.fr" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="" width="160"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1625735813/developez/colruyt-large.png" alt="" width="120"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width: 120px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
